--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
   background-color: lightcyan;
 }
 
+img {
+  width: 150px;
+  height:150px;
+}
+
 form {
   max-width: 400px;
   margin: 35px auto;
